--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.unity.addressables": "1.19.19",
     "com.unity.ads": "4.3.0",
     "com.unity.collab-proxy": "1.17.6",
     "com.unity.ide.rider": "3.0.16",
@@ -8,6 +9,7 @@
     "com.unity.inputsystem": "1.4.4",
     "com.unity.learn.iet-framework": "2.2.2",
     "com.unity.postprocessing": "3.2.2",
+    "com.unity.services.analytics": "4.2.0",
     "com.unity.shadergraph": "12.1.8",
     "com.unity.test-framework": "1.1.33",
     "com.unity.textmeshpro": "3.0.6",
